ecmascript/parser/tests/test262-error-references/fail/0131cd88c5774915.js.stderr
error: Unexpected token `{`. Expected identifier, string literal, numeric literal or [ for the computed key
 --> $DIR/tests/test262-parser/fail/0131cd88c5774915.js:1:6
  |
1 | ({get{a}:0})
  |      ^

